--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html public "storage">
 <html>
 <meta charset=utf-8/>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="style.css" rel="stylesheet">
 <title>My First React Router App</title>
 <div id=app></div>
 <script src="bundle.js"></script>
