--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <meta charset=utf-8/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="style.css" rel="stylesheet">
-<title>My First React Router App</title>
+<title>Flickr Search</title>
 <div id=app></div>
 <script src="bundle.js"></script>
